samples/_failures_safe/1761314183_f54b43_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_abf58420.c: In function ‘main’:
./samples/SAFE/__tmp_abf58420.c:147:17: error: expected ‘;’ at end of input
  147 |         return 1
      |                 ^
      |                 ;
./samples/SAFE/__tmp_abf58420.c:147:9: error: expected declaration or statement at end of input
  147 |         return 1
      |         ^~~~~~
./samples/SAFE/__tmp_abf58420.c:147:9: error: expected declaration or statement at end of input
